Refactored conversation info page UI. Added logic to edit public channel url.

--- a/SceytChatUiKit/src/main/res/drawable/sceyt_ic_un_block.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_ic_un_block.xml
@@ -4,11 +4,11 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M12,3.818C7.481,3.818 3.818,7.481 3.818,12C3.818,16.519 7.481,20.182 12,20.182C16.519,20.182 20.182,16.519 20.182,12C20.182,7.481 16.519,3.818 12,3.818ZM2,12C2,6.477 6.477,2 12,2C17.523,2 22,6.477 22,12C22,17.523 17.523,22 12,22C6.477,22 2,17.523 2,12Z"
-      android:fillColor="#4F6AFF"
+      android:pathData="M12,3.9C7.527,3.9 3.9,7.527 3.9,12C3.9,16.474 7.527,20.1 12,20.1C16.474,20.1 20.1,16.474 20.1,12C20.1,7.527 16.474,3.9 12,3.9ZM2.1,12C2.1,6.532 6.532,2.1 12,2.1C17.468,2.1 21.9,6.532 21.9,12C21.9,17.468 17.468,21.9 12,21.9C6.532,21.9 2.1,17.468 2.1,12Z"
+      android:fillColor="#5159F6"
       android:fillType="evenOdd"/>
   <path
-      android:pathData="M6.949,12C6.949,11.498 7.357,11.091 7.859,11.091H16.141C16.643,11.091 17.051,11.498 17.051,12C17.051,12.502 16.643,12.909 16.141,12.909H7.859C7.357,12.909 6.949,12.502 6.949,12Z"
-      android:fillColor="#4F6AFF"
+      android:pathData="M7,12C7,11.503 7.403,11.1 7.9,11.1H16.1C16.597,11.1 17,11.503 17,12C17,12.497 16.597,12.9 16.1,12.9H7.9C7.403,12.9 7,12.497 7,12Z"
+      android:fillColor="#5159F6"
       android:fillType="evenOdd"/>
 </vector>
