--- a/SceytChatUiKit/src/main/res/drawable/sceyt_ic_block.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_ic_block.xml
@@ -1,20 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="28"
-    android:viewportHeight="28">
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M14,25C20.075,25 25,20.075 25,14C25,7.925 20.075,3 14,3C7.925,3 3,7.925 3,14C3,20.075 7.925,25 14,25Z"
-        android:strokeWidth="2"
-        android:strokeColor="#4F6AFF"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="round" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M6.223,6.223L21.777,21.777"
-        android:strokeWidth="2"
-        android:strokeColor="#4F6AFF"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="round" />
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M2.1,12C2.1,6.532 6.532,2.1 12,2.1C17.467,2.1 21.9,6.532 21.9,12C21.9,17.468 17.467,21.9 12,21.9C6.532,21.9 2.1,17.468 2.1,12ZM12,3.9C16.473,3.9 20.1,7.527 20.1,12C20.1,13.913 19.437,15.67 18.328,17.056L6.944,5.671C8.329,4.563 10.087,3.9 12,3.9ZM3.9,12C3.9,16.474 7.526,20.1 12,20.1C13.912,20.1 15.67,19.437 17.056,18.329L5.671,6.944C4.562,8.33 3.9,10.088 3.9,12Z"
+      android:fillColor="#5159F6"
+      android:fillType="evenOdd"/>
 </vector>
