--- a/SceytChatUiKit/src/main/res/layout/sceyt_dialog_direct_channel_actions.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_dialog_direct_channel_actions.xml
@@ -1,27 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingVertical="15dp">
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/muteUnMute"
+        android:id="@+id/pin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?selectableItemBackground"
-        android:drawableStart="@drawable/sceyt_ic_muted_channel"
+        android:drawableStart="@drawable/sceyt_ic_pin"
         android:drawablePadding="15dp"
         android:gravity="center_vertical"
         android:includeFontPadding="false"
         android:paddingHorizontal="23dp"
         android:paddingVertical="10dp"
-        android:text="@string/sceyt_mute_"
+        android:text="@string/sceyt_pin_chat"
         android:textColor="@color/sceyt_color_text_themed"
         android:textSize="@dimen/_12ssp"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />
+        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
+        tools:visibility="visible" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/unPin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?selectableItemBackground"
+        android:drawableStart="@drawable/sceyt_ic_un_pin"
+        android:drawablePadding="15dp"
+        android:gravity="center_vertical"
+        android:includeFontPadding="false"
+        android:paddingHorizontal="23dp"
+        android:paddingVertical="10dp"
+        android:text="@string/sceyt_un_pin_chat"
+        android:textColor="@color/sceyt_color_text_themed"
+        android:textSize="@dimen/_12ssp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
+        tools:visibility="visible" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/unBlockUser"
@@ -39,7 +61,8 @@
         android:textSize="@dimen/_12ssp"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />
+        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
+        tools:visibility="visible" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/blockUser"
@@ -53,9 +76,8 @@
         android:paddingHorizontal="23dp"
         android:paddingVertical="10dp"
         android:text="@string/sceyt_block_user"
-        android:textColor="@color/sceyt_color_red"
+        android:textColor="@color/sceyt_color_text_themed"
         android:textSize="@dimen/_12ssp"
-        app:drawableTint="@color/sceyt_color_red"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />
 
@@ -71,7 +93,7 @@
         android:paddingHorizontal="23dp"
         android:paddingVertical="10dp"
         android:text="@string/sceyt_clear_history"
-        android:textColor="@color/sceyt_color_red"
+        android:textColor="@color/sceyt_color_text_themed"
         android:textSize="@dimen/_12ssp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />
