--- a/SceytChatUiKit/src/main/res/layout/sceyt_dialog_edit_avatar_type.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_dialog_edit_avatar_type.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingVertical="10dp">
 
@@ -10,32 +12,52 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?selectableItemBackground"
-        android:paddingHorizontal="18dp"
+        android:drawableStart="@drawable/sceyt_ic_camera"
+        android:drawablePadding="15dp"
+        android:gravity="center_vertical"
+        android:includeFontPadding="false"
+        android:paddingHorizontal="23dp"
         android:paddingVertical="10dp"
-        android:text="@string/sceyt_take_photo"
+        android:text="@string/camera"
         android:textColor="@color/sceyt_color_text_themed"
-        android:textSize="@dimen/mediumTextSize" />
+        android:textSize="@dimen/_12ssp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvUploadFromGallery"
+        android:id="@+id/tvGallery"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?selectableItemBackground"
-        android:paddingHorizontal="18dp"
+        android:drawableStart="@drawable/sceyt_ic_gallery"
+        android:drawablePadding="15dp"
+        android:gravity="center_vertical"
+        android:includeFontPadding="false"
+        android:paddingHorizontal="23dp"
         android:paddingVertical="10dp"
-        android:text="@string/sceyt_upload_from_gallery"
+        android:text="@string/select_photo"
         android:textColor="@color/sceyt_color_text_themed"
-        android:textSize="@dimen/mediumTextSize" />
+        android:textSize="@dimen/_12ssp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvDelete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?selectableItemBackground"
-        android:paddingHorizontal="18dp"
+        android:drawableStart="@drawable/sceyt_ic_trash"
+        android:drawablePadding="15dp"
+        android:gravity="center_vertical"
+        android:includeFontPadding="false"
+        android:paddingHorizontal="23dp"
         android:paddingVertical="10dp"
         android:text="@string/sceyt_delete"
         android:textColor="@color/sceyt_color_red"
-        android:textSize="@dimen/mediumTextSize" />
+        android:textSize="@dimen/_12ssp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
+        tools:visibility="visible" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
