Added logic to customize chat info page divider height.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_details.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_details.xml
@@ -17,7 +17,7 @@
         android:layout_height="72dp"
         android:layout_margin="16dp"
         android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/divider"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -55,5 +55,12 @@
         app:layout_constraintStart_toStartOf="@+id/title"
         app:layout_constraintTop_toBottomOf="@+id/title"
         tools:text="78 members" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        android:background="@color/sceyt_color_input"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
