--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_settings.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_settings.xml
@@ -44,7 +44,7 @@
         tools:visibility="visible" />
 
     <View
-        android:id="@+id/divider4"
+        android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="16dp"
         android:background="@color/sceyt_color_input" />
