--- a/SceytDemoApp/src/main/res/layout/fragment_channels.xml
+++ b/SceytDemoApp/src/main/res/layout/fragment_channels.xml
@@ -83,8 +83,9 @@
                 android:layout_gravity="end|bottom"
                 android:layout_margin="16dp"
                 android:backgroundTint="@color/sceyt_color_accent"
-                app:icon="@drawable/ic_add"
+                app:icon="@drawable/sceyt_ic_edit"
                 app:iconTint="@color/sceyt_color_white"
+                app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
                 app:layout_constraintBottom_toBottomOf="@+id/viewPager"
                 app:layout_constraintEnd_toEndOf="parent" />
 
