--- a/SceytDemoApp/src/main/res/layout/item_selected_user.xml
+++ b/SceytDemoApp/src/main/res/layout/item_selected_user.xml
@@ -10,8 +10,8 @@
 
     <com.sceyt.sceytchatuikit.presentation.customviews.SceytAvatarView
         android:id="@+id/avatar"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:layout_marginTop="11dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,15 +19,15 @@
 
     <FrameLayout
         android:id="@+id/layoutRemoveIcon"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginBottom="32dp"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
         android:background="@drawable/sceyt_bg_circle"
         android:backgroundTint="@color/sceyt_color_bg"
-        android:padding="1dp"
-        app:layout_constraintBottom_toBottomOf="@+id/avatar"
-        app:layout_constraintStart_toStartOf="@+id/avatar">
+        android:layout_marginTop="-4dp"
+        android:layout_marginEnd="-18dp"
+        android:padding="2dp"
+        app:layout_constraintEnd_toStartOf="@+id/avatar"
+        app:layout_constraintTop_toTopOf="@+id/avatar">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="match_parent"
