--- a/SceytDemoApp/src/main/res/layout/item_select_user.xml
+++ b/SceytDemoApp/src/main/res/layout/item_select_user.xml
@@ -16,42 +16,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.sceyt.sceytchatuikit.presentation.customviews.SceytAvatarView
-        android:id="@+id/avatar"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginVertical="6dp"
-        android:layout_marginStart="12dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/checkbox"
-        app:layout_constraintTop_toTopOf="parent"
-        app:sceytAvatarViewFullName="Art d"
-        app:sceytAvatarViewTextSize="15sp" />
-
-    <com.sceyt.sceytchatuikit.presentation.customviews.SceytOnlineView
-        android:id="@+id/onlineStatus"
-        android:layout_width="12dp"
-        android:layout_height="12dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/avatar"
-        app:layout_constraintEnd_toEndOf="@id/avatar"
-        app:sceytOnlineViewIndicatorColor="@color/sceyt_color_green"
-        app:sceytOnlineViewStrokeColor="@color/sceyt_color_bg"
-        app:sceytOnlineViewStrokeWidth="1dp"
-        tools:visibility="visible" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/userName"
+    <include
+        android:id="@+id/layoutDetails"
+        layout="@layout/item_user"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:lines="1"
-        android:textColor="@color/sceyt_color_text_themed"
-        android:textSize="@dimen/mediumTextSize"
-        app:layout_constraintBottom_toBottomOf="@id/avatar"
+        android:layout_marginStart="-3dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/avatar"
-        app:layout_constraintTop_toTopOf="@id/avatar"
-        tools:text="John" />
+        app:layout_constraintStart_toEndOf="@id/checkbox"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
