--- a/SceytDemoApp/src/main/res/layout/item_selected_user.xml
+++ b/SceytDemoApp/src/main/res/layout/item_selected_user.xml
@@ -15,16 +15,17 @@
         android:layout_marginTop="11dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:sceytAvatarDefaultIcon="@drawable/sceyt_ic_default_avatar" />
 
     <FrameLayout
         android:id="@+id/layoutRemoveIcon"
         android:layout_width="22dp"
         android:layout_height="22dp"
-        android:background="@drawable/sceyt_bg_circle"
-        android:backgroundTint="@color/sceyt_color_bg"
         android:layout_marginTop="-4dp"
         android:layout_marginEnd="-18dp"
+        android:background="@drawable/sceyt_bg_circle"
+        android:backgroundTint="@color/sceyt_color_bg"
         android:padding="2dp"
         app:layout_constraintEnd_toStartOf="@+id/avatar"
         app:layout_constraintTop_toTopOf="@+id/avatar">
@@ -42,11 +43,11 @@
         android:layout_height="12dp"
         android:layout_margin="1dp"
         android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@id/avatar"
+        app:layout_constraintEnd_toEndOf="@id/avatar"
         app:sceytOnlineViewIndicatorColor="@color/sceyt_color_green"
         app:sceytOnlineViewStrokeColor="@color/sceyt_color_bg"
-        app:sceytOnlineViewStrokeWidth="1dp"
-        app:layout_constraintBottom_toBottomOf="@id/avatar"
-        app:layout_constraintEnd_toEndOf="@id/avatar" />
+        app:sceytOnlineViewStrokeWidth="1dp" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/userName"
