--- a/SceytDemoApp/src/main/res/layout/item_user.xml
+++ b/SceytDemoApp/src/main/res/layout/item_user.xml
@@ -2,46 +2,57 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/parent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?selectableItemBackground"
-    android:paddingHorizontal="15dp">
+    android:paddingHorizontal="16dp">
 
     <com.sceyt.sceytchatuikit.presentation.customviews.SceytAvatarView
         android:id="@+id/avatar"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginVertical="6dp"
+        android:layout_marginVertical="7dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:sceytAvatarDefaultIcon="@drawable/sceyt_ic_default_avatar"
+        app:sceytAvatarEnableRipple="false"
         app:sceytAvatarViewFullName="Art d"
         app:sceytAvatarViewTextSize="15sp" />
 
-    <com.sceyt.sceytchatuikit.presentation.customviews.SceytOnlineView
-        android:id="@+id/onlineStatus"
-        android:layout_width="12dp"
-        android:layout_height="12dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/avatar"
-        app:layout_constraintEnd_toEndOf="@id/avatar"
-        app:sceytOnlineViewIndicatorColor="@color/sceyt_color_green"
-        app:sceytOnlineViewStrokeColor="@color/sceyt_color_bg"
-        app:sceytOnlineViewStrokeWidth="1dp"
-        tools:visibility="visible" />
-
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/userName"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:fontFamily="@font/roboto_medium"
+        android:lines="1"
+        android:textAlignment="viewStart"
+        android:textColor="@color/sceyt_color_text_themed"
+        android:textSize="@dimen/mediumTextSize"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintBottom_toTopOf="@+id/tvStatus"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toEndOf="@id/avatar"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
+        tools:text="John" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvStatus"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:lines="1"
-        android:textColor="@color/sceyt_color_text_themed"
-        android:textSize="@dimen/mediumTextSize"
-        app:layout_constraintBottom_toBottomOf="@id/avatar"
+        android:textColor="@color/sceyt_color_gray_secondary"
+        android:textSize="13sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@id/avatar"
-        app:layout_constraintTop_toTopOf="@id/avatar"
-        tools:text="John" />
+        app:layout_constraintTop_toBottomOf="@+id/userName"
+        tools:text="online" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
