--- a/SceytChatUiKit/src/main/res/layout/sceyt_search_channels_empty_state.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_search_channels_empty_state.xml
@@ -22,9 +22,10 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
-            app:srcCompat="@drawable/sceyt_ic_search" />
+            app:srcCompat="@drawable/sceyt_ic_search"
+            app:tint="@color/sceyt_color_accent" />
 
-        <TextView
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/textView"
             themedTextColor="@{R.color.sceyt_color_black_themed}"
             android:layout_width="wrap_content"
@@ -34,11 +35,27 @@
             android:text="@string/sceyt_ui_channel_list_empty"
             android:textColor="@color/sceyt_color_black_themed"
             android:textDirection="locale"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/tvDesc"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvDesc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/sceyt_ui_channel_list_empty_desc"
+            android:textColor="@color/sceyt_color_gray_secondary"
+            android:textDirection="locale"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
