--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_members_by_role.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_members_by_role.xml
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
-        android:id="@+id/divider1"
+        android:id="@+id/dividerBetweenMembersAndAdmins"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/sceyt_color_input"
@@ -43,7 +43,7 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider1" />
+        app:layout_constraintTop_toBottomOf="@+id/dividerBetweenMembersAndAdmins" />
 
     <View
         android:id="@+id/divider"
