--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_toolbar.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_toolbar.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="?android:actionBarSize"
+    android:background="@color/sceyt_color_bg"
     app:layout_constraintTop_toTopOf="parent">
 
     <androidx.appcompat.widget.AppCompatImageView
