--- a/SceytChatUiKit/src/main/res/drawable/sceyt_ic_status_not_sent.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_ic_status_not_sent.xml
@@ -1,29 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="11dp"
-    android:height="11dp"
-    android:viewportWidth="11"
-    android:viewportHeight="11">
-
-  <group
-      android:scaleX="0.75"
-      android:scaleY="0.75"
-      android:pivotX="6"
-      android:pivotY="6">
-
-    <path
-        android:strokeWidth="1"
-        android:pathData="M5.5,10C7.9853,10 10,7.9853 10,5.5C10,3.0147 7.9853,1 5.5,1C3.0147,1 1,3.0147 1,5.5C1,7.9853 3.0147,10 5.5,10Z"
-        android:strokeLineJoin="round"
-        android:fillColor="#00000000"
-        android:strokeColor="#7C7E8E"
-        android:strokeLineCap="round"/>
-    <path
-        android:strokeWidth="1"
-        android:pathData="M5.5,2.8003V5.5003L7.3,6.4003"
-        android:strokeLineJoin="round"
-        android:fillColor="#00000000"
-        android:strokeColor="#7C7E8E"
-        android:strokeLineCap="round"/>
-  </group>
-
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M12,5.6C8.465,5.6 5.6,8.465 5.6,12C5.6,15.535 8.465,18.4 12,18.4C15.535,18.4 18.4,15.535 18.4,12C18.4,8.465 15.535,5.6 12,5.6ZM4,12C4,7.582 7.582,4 12,4C16.418,4 20,7.582 20,12C20,16.418 16.418,20 12,20C7.582,20 4,16.418 4,12ZM12,7C12.442,7 12.8,7.358 12.8,7.8V11.2H16.2C16.642,11.2 17,11.558 17,12C17,12.442 16.642,12.8 16.2,12.8H12C11.558,12.8 11.2,12.442 11.2,12V7.8C11.2,7.358 11.558,7 12,7Z"
+      android:fillColor="#7C7E8E"
+      android:fillType="evenOdd"/>
 </vector>
