--- a/SceytChatUiKit/src/main/res/drawable/sceyt_ic_status_read.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_ic_status_read.xml
@@ -1,27 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="17dp"
-    android:height="9dp"
-    android:viewportWidth="17"
-    android:viewportHeight="9">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M1,4.8306L4.4041,7.9998L5.2151,7.1497"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.4"
-      android:fillColor="#00000000"
-      android:strokeColor="#4F6AFF"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M8.5426,3.662L11.082,1"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.4"
-      android:fillColor="#00000000"
-      android:strokeColor="#4F6AFF"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M5.9181,4.8308L9.3222,8L16.0001,1"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.4"
-      android:fillColor="#00000000"
-      android:strokeColor="#4F6AFF"
-      android:strokeLineCap="round"/>
+      android:pathData="M17.135,5.653C17.528,6.046 17.559,6.665 17.226,7.093L17.135,7.196L6.226,18.105C5.833,18.498 5.214,18.528 4.786,18.195L4.683,18.105L0.32,13.741C-0.107,13.315 -0.107,12.624 0.32,12.198C0.713,11.805 1.332,11.775 1.76,12.108L1.862,12.198L5.455,15.79L15.592,5.653C16.018,5.227 16.709,5.227 17.135,5.653ZM23.681,5.653C24.074,6.046 24.104,6.665 23.771,7.093L23.681,7.196L12.771,18.105C12.345,18.531 11.655,18.531 11.229,18.105C10.835,17.712 10.805,17.093 11.138,16.665L11.229,16.562L22.138,5.653C22.564,5.227 23.254,5.227 23.681,5.653Z"
+      android:fillColor="#5159F6"/>
 </vector>
